@@ -1,3 +1,11 @@
+2002-11-04  Richard Hult  <rhult@codefactory.se>
+
+	* src/dh-search.c (dh_search_new): Expand and fill when packing
+	search entry.
+
+	* src/dh-window.c (window_populate): HIGify, i.e. don't use
+	mnemonics for notebook page tabs.
+
 2002-11-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/dh-window.c: 
